--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 
 
         <div class="container py-md-5 pt-5 text-center">
-            <div id="carouselExampleControls" class="carousel slide pt-5 " data-ride="carousel">
+            <div id="carouselExampleControls-2" class="carousel slide pt-5 " data-ride="carousel">
                 <div class="carousel-inner">
 
 
@@ -644,13 +644,13 @@
 
                 </div>
 
-                <a class="carousel-control-prev " href="#carouselExampleControls" role="button" data-slide="prev">
+                <a class="carousel-control-prev " href="#carouselExampleControls-2" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                   </a>
 
 
-                  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <a class="carousel-control-next" href="#carouselExampleControls-2" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
